prod/python-app-3.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: python-app-3
  namespace: prod
spec:
  ports:  
    - port: 80
      targetPort: 5000
  selector:
    role: python-app-3
