prod/python-pod-1.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: python-pod-1
  namespace: prod
spec:
  ports:  
    - port: 80
      targetPort: 5001
  selector:
    role: python-pod-1
