prod/default-deny.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: prod
  name: default-deny
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
