prod/networkpolicies.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: prod
  name: redis
spec:
  podSelector:
    matchLabels:
      role: redis
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: python-app-1
      ports:
        - protocol: TCP
          port: 6379
    - from:
      - podSelector:
          matchLabels:
            role: python-pod-1
      ports:
        - protocol: TCP
          port: 6379          

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: prod
  name: python-app-1
spec:
  podSelector:
    matchLabels:
      role: python-app-1
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: nginx
      ports:
        - protocol: TCP
          port: 5000
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: prod
  name: python-app-2
spec:
  podSelector:
    matchLabels:
      role: python-app-2
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: nginx
      ports:
        - protocol: TCP
          port: 5000
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: prod
  name: python-app-3
spec:
  podSelector:
    matchLabels:
      role: python-app-3  
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: nginx
      ports:
        - protocol: TCP
          port: 5000               

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: prod
  name: python-pod-1
spec:
  podSelector:
    matchLabels:
      role: python-pod-1
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: nginx
      ports:
        - protocol: TCP
          port: 5000 

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: prod
  name: nginx
spec:
  podSelector:
    matchLabels:
      role: nginx
  ingress:
    - {}
